alpm-types/src/snapshots/url::test_source_url_parsing_failure@case_2.snap
---
source: alpm-types/src/url.rs
---
git+https://example/project#branch=feature#branch=feature
                                          ^
invalid unexpected trailing content in URL.
expected end of input.
