alpm-types/src/snapshots/url::test_source_url_parsing_failure@case_3.snap
---
source: alpm-types/src/url.rs
---
git+https://example/project#branch=feature?signed?signed
                                                 ^
invalid or duplicate query parameter for detected VCS.
