alpm-types/src/snapshots/url::test_source_url_parsing_failure@case_4.snap
---
source: alpm-types/src/url.rs
---
error: invalid bzr revision type
 | 
 | bzr+https://example/project#branch=feature
 |                            ~^ expected revision keyword
 | 
 = while parsing:
   source url: (bzr+https://example/…)
   └ bzr fragment: (#branch=feature)
     → invalid bzr revision type
     → expected revision keyword
