alpm-types/src/snapshots/url::test_source_url_parsing_failure@case_6.snap
---
source: alpm-types/src/url.rs
---
error: invalid hg revision type
 | 
 | hg+https://example/project#commit=154021a
 |                           ~^ expected one of: 'branch', 'revision', 'tag'
 | 
 = while parsing:
   source url: (hg+https://example/p…)
   └ hg fragment: (#commit=154021a)
     → invalid hg revision type
     → expected one of: 'branch', 'revision', 'tag'
