alpm-types/src/snapshots/url::test_source_url_parsing_failure@case_7.snap
---
source: alpm-types/src/url.rs
---
hg+https://example/project#branch=feature?signed
                                         ^
invalid or duplicate query parameter for detected VCS.
